# bonsol-powpow

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  testkp.json
programs/bonsol-pow-pow/: Cargo.toml
programs/bonsol-pow-pow/src/: lib.rs
tests/: bonsol-pow-example.ts  init.test.ts
zkprograms/collatz/: Cargo.toml  manifest.json
zkprograms/collatz/src/: main.rs
