[package]
name = "bonsol-pow-pow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonsol_pow_pow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "anagram-bonsol-channel-interface/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.30", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
anagram-bonsol-channel-interface = { path = "../../../bonsol/onchain/channel-interface" , features = ["anchor"], default-features = false}
