[package]
name = "bonsol-pow-pow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bonsol_pow_pow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "bonsol-anchor-interface/idl-build"]

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version="=0.30.1",git ="https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"], rev="a2937a9326f834859ff5bbe942f073ba1b0bcdc5"}
anchor-spl = { git ="https://github.com/coral-xyz/anchor.git", rev="a2937a9326f834859ff5bbe942f073ba1b0bcdc5"}
bonsol-anchor-interface = { git="https://github.com/bonsol-collective/bonsol-anchor-interface.git"}
solana-program = "2"
spl-token = {version ="5.0.2"}
spl-associated-token-account = {version ="5.0.1"}

[patch.crates-io]
